Added syntax highlighter includes to index.html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@ for ( var i=0; i< rules.length; i++ ){
     }
 }
 </script>
+<script type="text/javascript" src="javascripts/XRegExp.js"></script> <!-- XRegExp is bundled with the final shCore.js during build -->
+	<script type="text/javascript" src="javascripts/shCore.js"></script>
+	<script type="text/javascript" src="javascripts/shBrushJScript.js"></script>
+	<link type="text/css" rel="stylesheet" href="stylesheets/shCoreDefault.css"/>
+	<link type="text/css" rel="Stylesheet" href="stylesheets/shThemeDefault.css" />
+	<script type="text/javascript">SyntaxHighlighter.all();</script>
+
   </head>
 
   <body>
