--- a/repl.html
+++ b/repl.html
@@ -123,7 +123,8 @@ var pa_new = pa.combine(function (i) {
                 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
                 <script src="javascripts/jqconsole-2.7.min.js" type="text/javascript" charset="utf-8"></script>
                 <script>
-                    var header_message = window.navigator.userAgent + '\n';
+                    var header_message =
+                    (window.navigator.userAgent).substring(0,70) + '...\n';
                     try {
                         if (RiverTrail.compiler === undefined) {
                             header_message += 'River Trail not found. Enabling sequential mode...';
