--- a/repl.html
+++ b/repl.html
@@ -115,6 +115,7 @@ var pa_new = pa.combine(function (i) {
                 <script src="javascripts/ace.js" type="text/javascript" charset="utf-8"></script>
                 <script>
                     var editor = ace.edit("editor");
+                    //editor.setFontSize(14);
                     editor.setTheme("ace/theme/twilight");
                     editor.session.setMode("ace/mode/javascript");
                 </script>
