Changed skeleton shot

--- a/tutorial.html
+++ b/tutorial.html
@@ -121,7 +121,7 @@ for ( var i=0; i< rules.length; i++ ){
           skeleton for the video application that you can start with. Load up
           <code>index.html</code> in this directory in Firefox and you should see the
           default screen for the application skeleton:
-          <img src="images/skeleton.png"/>
+          <img src="images/skeleton3.png"/>
           The large box in the center is a <a
               href="https://developer.mozilla.org/en-US/docs/Canvas_tutorial">
               Canvas </a> that is used for rendering the video output. The
