--- a/repl.html
+++ b/repl.html
@@ -11,6 +11,8 @@
         <title>River Trail REPL</title>
         <style>
             #container {
+                width: 90%;
+                margin: 0 auto;
             }
             .jqconsole-header {
                 font-weight: normal;
