--- a/repl.html
+++ b/repl.html
@@ -6,7 +6,8 @@
         <meta http-equiv="X-UA-Compatible" content="chrome=1" />
         <meta name="description" content="Jsreeram.github.com : jsreeram.github.com" />
 
-        <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/replstylesheet.css">
+        <link rel="stylesheet" type="text/css" media="screen"
+        href="stylesheets/replstyle.css">
 
         <title>River Trail REPL</title>
         <style>
