Remove print margin

--- a/repl.html
+++ b/repl.html
@@ -121,6 +121,7 @@ var pa_new = pa.combine(function (i) {
                     //editor.setFontSize(14);
                     editor.setTheme("ace/theme/twilight");
                     editor.session.setMode("ace/mode/javascript");
+                    editor.setShowPrintMargin(false);
                 </script>
                 <img src="images/gray-play.svg" id="run" height="40"
                 style="position:absolute;left:46%;top:40%;z-index:10"
